--- a/package.json
+++ b/package.json
@@ -4,5 +4,28 @@
   "main": "index.js",
   "repository": "https://github.com/dsaglam94/typegraph-apollo-server.git",
   "author": "dsaglam94 <d.saglam@outlook.fr>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@typegoose/typegoose": "^10.0.0",
+    "apollo-server": "^3.11.1",
+    "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.0",
+    "config": "^3.3.8",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "graphql": "15.x",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.2",
+    "nanoid": "^4.0.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/config": "^3.3.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/jsonwebtoken": "^9.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
+  }
 }
